--- a/digitalizacion/static/css/estilos_index.css
+++ b/digitalizacion/static/css/estilos_index.css
@@ -8,6 +8,11 @@ img{
 
 }
 
+
+.espacio_abajo{
+    padding: 15rem;
+}
+
 .boton{
     background-color: gray;
     color: white;
@@ -42,15 +47,14 @@ img{
 /* ESTRUCTURA Del Footer */
 
 .pie_pagina {
-    background-color: blanchedalmond;
-    background: url(../imagenes/Imagen_footer.jpg);
-    background-position: center center;
-    background-size: cover;
+    background-color: black;
+
+    padding:7rem;
+
     -webkit-filter: brightness(50%);
     filter: brightness(50%);
     border-style: solid;
-    border-color: blanchedalmond;
-    border-width: 3px;
+
 
 }
 
@@ -229,11 +233,13 @@ body{
 
 
 .informacion_contacto{
-    color: white;
+
+    border-radius: 20px;
+    color: wheat;
     padding: 4rem;
-    background-color: black;
-    border-style: solid;
-    border-color: white;
+    background-color: rgb(43, 42, 42);
+    border: groove;
+    border-color: blanchedalmond;
 }
 
 .fila_profesionales{
