--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -47,9 +47,9 @@
                    
                         <nav class="navegador_informacion">
                             <a href="/prueba">Ver usuarios registrados</a>
-                            <a href="/prueba">Ver Peluqueros</a>
+                            <a href="/Profesionales">Ver Peluqueros</a>
                             <a href="/Contacto">Contacto</a>
-                            <a href="/Contacto">Ver Reservas</a>
+                            <a href="/total_reservas">Ver Reservas</a>
                             <a href="/poblar">Agregar horas</a>
                             <a href="/fechas">Agregar Fecha</a>
                         </nav> 
@@ -72,8 +72,7 @@
                         {% else %} 
                             <nav class="navegador_informacion">
                                 <a href="/prueba">Quiénes somos</a>
-                                <a href="/reservas">Contacto</a>
-                                <a href="/prueba">Dirección</a>
+                                <a href="/Contacto">Contacto</a>
                                 <a href="/Profesionales">Profesionales</a>
                             </nav>       
                         {% endif %}  
