--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -26,11 +26,11 @@
                                         <h2>Registrar usuario</h2>
 
                                         <form method="POST">
+                                            
                                             {{ form.as_p }}
                                             {% csrf_token %}
-                                            <input type="submit" value="registrar" >
-                                            <a href="/prueba"> <input type="button" value="volver" > </a>
-
+                                            <button type="submit">Registrar</button>
+                                            
                                         </form>
                                     
                                     
