--- a/peluqueria/templates/pagina_profesionales.html
+++ b/peluqueria/templates/pagina_profesionales.html
@@ -41,7 +41,7 @@
                             
                             <hr/>
                             
-                            <a href="/prueba"><input type="button" value="volver" class="btn btn-info"></a>
+                            <a href="/"><input type="button" value="volver" class="btn btn-info"></a>
 
 
                             </div>
