--- a/peluqueria/templates/perfil.html
+++ b/peluqueria/templates/perfil.html
@@ -47,7 +47,7 @@
                                             
                                             <hr/>
                                             
-                                            <a  href="/prueba"><input type="button" value="volver" ></a>
+                                            <a  href="/"><input type="button" value="volver" ></a>
                                             <a  href="/configuracion"><input type="button" value="editar" ></a>
                                         
                                         
