--- a/peluqueria/templates/total_reservas.html
+++ b/peluqueria/templates/total_reservas.html
@@ -68,7 +68,7 @@
                         </script>
         {% else  %}
             <script>
-                location.href="/prueba"
+                location.href="/"
             </script>
 
         {% endif %}
