--- a/users/templates/borrarCuenta.html
+++ b/users/templates/borrarCuenta.html
@@ -35,7 +35,7 @@
                                     </fieldset>
                                     <div class="form-group">
                                         <button type="submit">Eliminar Cuenta</button>
-                                        <a href="/prueba"><input type="button" value="volver" ></a>
+                                        <a href="/"><input type="button" value="volver" ></a>
                                     </div>
                                 </form>
                             
