--- a/users/templates/index_cliente_prueba.html
+++ b/users/templates/index_cliente_prueba.html
@@ -21,7 +21,7 @@
 
             <section class="barra_inferior">
                 <div class="peluqueria">
-                    <a href="/prueba">
+                    <a href="/">
                      <h1>Bienvenido a la Peluquería <b>{{request.user.username}}</b></h1>
                     </a>
                  </div>
