--- a/users/templates/pagina_iniciar_sesion.html
+++ b/users/templates/pagina_iniciar_sesion.html
@@ -20,7 +20,7 @@
                                     {% csrf_token %}
                                      <div class="botones">                   
                                         <input type="submit" value="login" class="btn btn-success">
-                                        <a href="/prueba"> <input type="button" value="volver"> </a>
+                                        <a href="/"> <input type="button" value="volver"> </a>
                                     </div>
                                 </form>
                             </div>            
