--- a/digitalizacion/static/css/estilos_index.css
+++ b/digitalizacion/static/css/estilos_index.css
@@ -311,3 +311,33 @@ padding-bottom: 25rem;
     color:rgb(175, 175, 175);
     text-align: center;
 }
+
+
+.box{
+    color: white;
+    width: 95%;
+    
+ 
+  
+
+    text-align: left;
+    margin:  0 auto;
+
+}
+
+.box form{
+    width: 40%;
+}
+
+.box form input{
+    text-align: right;
+}
+
+
+.success{
+    list-style: none;
+    background-color: #677079;
+    color: white;
+    box-shadow: 12px 12px 12px #000000;
+    text-align: center;
+    }
