--- a/peluqueria/templates/contacto_prueba.html
+++ b/peluqueria/templates/contacto_prueba.html
@@ -32,7 +32,7 @@
                     
                             <hr/>
                     
-                            <a href="/prueba"><input type="button" value="volver" class="btn btn-info"></a>
+                            <a href="/"><input type="button" value="volver" class="btn btn-info"></a>
                         </ul>
                      </div>
                 </div>
