--- a/peluqueria/templates/pagina_direccion.html
+++ b/peluqueria/templates/pagina_direccion.html
@@ -28,7 +28,7 @@
 
             <section class="barra_inferior">
                 <div class="peluqueria">
-                    <a href="/prueba">
+                    <a href="/">
                      <h1>Bienvenido a la Peluquería</h1>
                     </a>
                  </div>
