--- a/peluqueria/templates/pagina_ubicacion.html
+++ b/peluqueria/templates/pagina_ubicacion.html
@@ -28,14 +28,14 @@
 
             <section class="barra_inferior">
                 <div class="peluqueria">
-                    <a href="/prueba">
+                    <a href="/">
                      <h1>Bienvenido a la Peluquería</h1>
                     </a>
                  </div>
                     <nav class="navegador_informacion">
-                        <a href="/prueba">Quiénes somos</a>
+                        <a href="/">Quiénes somos</a>
                         <a href="/Contacto">Contacto</a>
-                        <a href="/prueba">Dirección</a>
+                        <a href="/">Dirección</a>
                         <a href="/Profesionales">Profesionales</a>
                         <a href="">Todos los servicios</a>
                     </nav>
