--- a/peluqueria/templates/index_prueba.html
+++ b/peluqueria/templates/index_prueba.html
@@ -28,7 +28,7 @@
                                             </div>
                                             <div class="servicios">
                                                 <h3>alisados</h3>
-                                                <img src="{% static 'imagenes/Alisado.jpg' %}"  alt="My image">
+                                                <img src="{% static 'imagenes/AlisadoNormal.jpg' %}"  alt="My image">
                                                 <div class="contenido-servicio">
                                                     <a href="/Alisados" class="boton boton-gris">Ver más</a>
                                                 </div>
