--- a/peluqueria/templates/pagina_alisados.html
+++ b/peluqueria/templates/pagina_alisados.html
@@ -12,7 +12,7 @@
                     <div class="catalogo_superior">
                         <div class="servicios">
                             <h3>ALISADO NORMAL</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <img src="{% static 'imagenes/Alisado.jpg' %}"  alt="My image">
                                 <div class="infor_servicio">
                                     <li>Duración: 30 Minutos </li>
                                     <li>Precio: $8.000 </li>
@@ -23,7 +23,7 @@
                         </div>
                         <div class="servicios">
                             <h3>ALISADO CON KERATINA</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}" alt="My image">
+                            <img src="{% static 'imagenes/AlisadoKeratina.jpg' %}" alt="My image">
                             <div class="infor_servicio">
                                 <li>Duración: 180 Minutos </li>
                                 <li>Precio: $25.000 </li>
@@ -34,7 +34,7 @@
                         </div>
                         <div class="servicios">
                             <h3>ALISADO PERMANENTE</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <img src="{% static 'imagenes/AlisadoPerma.jpg' %}"  alt="My image">
                             <div class="infor_servicio">
                                 <li>Duración: 180 Minutos </li>
                                 <li>Precio: $55.000 </li>
