--- a/peluqueria/templates/pagina_peinados.html
+++ b/peluqueria/templates/pagina_peinados.html
@@ -12,7 +12,7 @@
                     <div class="catalogo_superior">
                         <div class="servicios">
                             <h3>PEINADO MUJER</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <img src="{% static 'imagenes/PeinadoMujer.jpg' %}"  alt="My image">
                                 <div class="infor_servicio">
                                     <li>Duración: 60 Minutos</li>
                                     <li>Precio: $10.000</li>
