--- a/peluqueria/templates/pagina_cortes.html
+++ b/peluqueria/templates/pagina_cortes.html
@@ -11,7 +11,7 @@
                     <div class="catalogo_superior">
                         <div class="servicios">
                             <h3>Cortes de cabello niño</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <img src="{% static 'imagenes/CorteNiño.jpg' %}"  alt="My image">
                                 <div class="infor_servicio">
                                     <li>Duración: 30 Minutos</li>
                                     <li>Precio: $7.000</li>
@@ -22,7 +22,7 @@
                         </div>
                         <div class="servicios">
                             <h3>Cortes de cabello niña</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}" alt="My image">
+                            <img src="{% static 'imagenes/CorteNiña.jpg' %}" alt="My image">
                             <div class="infor_servicio">
                                 <li>Duración: 30 Minutos</li>
                                 <li>Precio: $7.000</li>
@@ -33,7 +33,7 @@
                         </div>
                         <div class="servicios">
                             <h3>Cortes de cabello Varon</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <img src="{% static 'imagenes/CorteHombre.jpg' %}"  alt="My image">
                             <div class="infor_servicio">
                                 <li>Duración: 30 Minutos</li>
                                 <li>Precio: $9.000</li>
@@ -46,7 +46,7 @@
                      <div class="catalogo_inferior">
                         <div class="servicios">
                             <h3>Cortes de cabello Dama</h3> 
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image"> 
+                            <img src="{% static 'imagenes/CorteMujer.jpg' %}"  alt="My image"> 
                             <div class="infor_servicio">
                                 <li>Duración: 30 Minutos</li>
                                 <li>Precio: $9.000</li>
